--- a/evaluation.tex
+++ b/evaluation.tex
@@ -22,7 +22,7 @@ The following metrics characterize the performance.
 \subsubsection*{Satisfaction $\sat$} The satisfaction is the fraction $Hit/Hit+miss$ of chunks peers receive in time, averaged over all peers. 
 \subsubsection*{Avg. Loss $lo$} Indicates the average number of chunks that peers do not receive in time, averaged over all peers. 
 \subsubsection*{Detection Overhead $DO$} The detection overhead describes the communication overhead created by the detection mechanism. 
-More formally, it is the ratio of messages exchanged in the system due to the detection mechanism and all signaling messages: (1) $BM$ requests, (2) $BM$ updates, and (3) neighboring requests, accepts and rejects).
+More formally, it is the ratio of messages exchanged in the system due to the detection mechanism and all signaling messages: (1) $BM$ requests, (2) $BM$ updates, and (3) neighboring requests, accepts and rejects.
 \subsubsection*{Benign Ratio per Neighbor List $BRNL$} The benign ratio per neighbor list measures the fraction of benign peers in the source's neighbor list.
 
 \subsection{Case 1: \drop Severity}
