--- a/ref.bib
+++ b/ref.bib
@@ -141,3 +141,10 @@ pages={133-146}
   title = {{Emule Digital Content}},
   howpublished = {\url{http://emule.com}},
 }
+@inproceedings{hiller2001approach,
+  title={{An Approach for Analysing the Propagation of Data Errors in Software}},
+  author={{Hiller, M. et al.}},
+  booktitle={{Proc. DSN}},
+  pages={161-170},
+  year={2001}
+}
