--- a/detection.tex
+++ b/detection.tex
@@ -30,9 +30,9 @@ In the remainder of the section, we present a mechanism that allows nodes to col
 
 \begin{figure}
  \centering
- \includegraphics[width=5.5cm,height=6.5cm]{./Figures/detection.pdf}
+ \includegraphics[width=5.5cm,height=6.2cm]{./Figures/detection.pdf}
  
-  \caption{Detection process for \drop. $S$ denotes the source.}
+  \caption{detection process for \drop. $S$ denotes the source.}
    \vspace{-3.5mm}
 \label{detection-blocks} 
 \end{figure}
@@ -50,21 +50,23 @@ Finally, $b$ reacts based on the received response from the source and then forw
 
 The node $b$ bases its decision on whether to initiate a request or forward a complaint on a number of threshold parameters, which we summarize in Table~\ref{tab:acronyms} together with various system parameters governing the attack. 
 
-\begin{table}[ht]
+
+\begin{table}
 \center
-\caption{Acronyms}
+
+\caption{ACRONYMS}
 \begin{tabular}{|c|l||c|l|}
 \hline
 
 \bf{Var.} & \bf{Description}  & \bf{Var.} & \bf{Description} \\\hline\hline
-$H_n$ & headnodes in a complaint & $P_n$ & potential candidates list \\\hline
-$x$ & no. of malicious peers & $\eta$ & mal. headnodes fraction\\\hline
-$BM$ & buffer-map & $MN$ & mal. non-headnodes \\\hline
+$H_n$ & headnodes in a complaint & $P_n$ & potential candidates \\\hline
+$x$ & no. of malicious peers & $x_h$ & mal. headnodes \\\hline
+$BM$ & buffer-map & $x-x_h$ & mal. non-headnodes \\\hline
 $\sat$ & peer satisfaction level & $\satThres$ & satisfaction threshold \\\hline
 $\minP$ & min. drop responses & $\minDR$ & no. allowed det. \\\hline
 \end{tabular}
 \label{tab:acronyms}
-% \vspace{-3mm}
+\vspace{-2.5mm}
 \end{table}
 
 \subsection{Detection Trigger}
