--- a/evaluation.tex
+++ b/evaluation.tex
@@ -33,7 +33,7 @@ As malicious peers aim to occupy the closest peers to the source, the remaining 
 
 Given the source's neighbor list size $LS=10$, we choose the following combinations for the attackers budget $(x_h, x-x_h)$: $(10,0), (5,15), (7,49), (8,24)$.
 Here, $x-x_h=49$ denotes that 7 malicious peers are connected to each of the 7 malicious headnodes.
-We start with analyzing the attack's impact on DONet and then we evaluate the resilience of SWAP to the attack.
+First, we analyze the attack's impact on DONet and then we evaluate the resilience of SWAP to the attack.
 
 Figure~\ref{subfig:avg-loss-donet} displays the average chunk loss ratio.
 Unsurprisingly, the average loss is 100\% when $x_h= LS =10$, which means that the source's $LS$ is utterly saturated with malicious headnodes, i.e., no chunks are transmitted to the rest of the overlay.
@@ -65,13 +65,15 @@ For the same reason, the satisfaction level of benign peers eventually decreases
   \begin{subfigure}[c]{0.95\columnwidth}
     \centering
     \includegraphics[width=8.4cm,height=3cm]{./Figures/avg-loss-donet.eps}
-    \caption{Average loss}%
+    \captionsetup{font=ninept}
+    \subcaption{Average loss}%
     \label{subfig:avg-loss-donet}
   \end{subfigure}
   \begin{subfigure}[c]{0.95\columnwidth}
     \centering
     \includegraphics[width=8.4cm,height=3cm]{./Figures/satisfaction-donet.eps}
-    \caption{Average peer satisfaction}%
+    \captionsetup{font=ninept}
+    \subcaption{Average peer satisfaction}
     \label{subfig:satisfaction-donet}
   \end{subfigure}
   \caption{Attack's impact on DONet}%
@@ -104,19 +106,22 @@ For the same reason, the satisfaction level of benign peers eventually decreases
   \begin{subfigure}[c]{0.95\columnwidth}
     \centering
     \includegraphics[width=8.4cm,height=3cm]{./Figures/det-BRNL1.eps}
-    \caption{Average BRNL}%
+    \captionsetup{font=ninept}
+    \subcaption{Average BRNL}%
    \label{subfig:BRNL}
   \end{subfigure}
   \begin{subfigure}[c]{0.95\columnwidth}
     \centering
     \includegraphics[width=8.4cm,height=3cm]{./Figures/det-sat.eps}
-    \caption{Average peer satisfaction}%
+    \captionsetup{font=ninept}
+    \subcaption{Average peer satisfaction}%
      \label{subfig:det-sat}
   \end{subfigure}
   \begin{subfigure}[c]{0.95\columnwidth}
     \centering
     \includegraphics[width=8.4cm,height=3cm]{./Figures/overhead.eps}
-    \caption{Detection overhead}%
+    \captionsetup{font=ninept}
+    \subcaption{Detection overhead}%
     \label{subfig:overhead}
   \end{subfigure}
   \caption{Detection mechanism performance}%
@@ -165,7 +170,7 @@ We discuss the effect of varying those parameters later on.
 As depicted in Figure~\ref{subfig:BRNL}, we observe an increase in the benign headnodes ratio in the source's neighbor list after the detection mechanism starts operating at $t=250s$.  
 For instance, if $(x_h, x-x_h)=(5, 40)$, the source successfully attains 80\% benign headnodes due to the detection mechanism.
 For $(x_h, x-x_h)=(8, 40)$, the $BRNL$ ratio increases up to 90-100\%, which reflects the efficiency of the detection mechanism in replacing malicious headnodes to restore peers' satisfaction levels. 
-Even if the source is initially only connected to malicious headnodes, i.e., $x_h=10$, the detection mechanism is capable of restoring a $BRNL$ of close to 80\%. 
+Even if the source is initially only connected to malicious headnodes, i.e., $x_h=10$, the detection mechanism is capable of restoring a $BRNL$ to approximately 80\%. 
 
 Figure~\ref{subfig:det-sat} illustrates the average restored peer satisfaction level when the detection mechanism is active. 
 For all considered attack budgets, the average satisfaction level quickly increases to 95-100\% for $(x_h, x-x_h)= (5,40), (8,40)$.
