--- a/detection.tex
+++ b/detection.tex
@@ -32,7 +32,7 @@ In the remainder of the section, we present a mechanism that allows nodes to col
  \centering
  \includegraphics[width=5.5cm,height=6.2cm]{./Figures/detection.pdf}
  
-  \caption{detection process for \drop. $S$ denotes the source.}
+  \caption{Detection process for \drop. $S$ denotes the source.}
    \vspace{-3.5mm}
 \label{detection-blocks} 
 \end{figure}
