--- a/analysis.tex
+++ b/analysis.tex
@@ -1,5 +1,5 @@
 \section{Analysis}
-\label{sec:analysis}
+\label{online-analysis}
 
 
 We focus on characterizing the behavior of malicious nodes aiming to subvert the detection mechanism to remove honest headnodes and retain malicious ones. 
