--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,5 +1,5 @@
 \section{Conclusion \& Future Work}
-\label{sec:conclusion}
+\label{online-conclusion}
 In this work\footnote{Research supported in part by EC H2020 CIPSEC GA \#700378 and BMBF TUD-CRISP}, we focus on the class of internal inference attacks for pull-based overlays. The attacker conducts a $BM$ cheating attack after placing malicious peers as headnodes.
 We show that the attack severity significantly increases the chunk loss ratio, accompanied by low satisfaction level experienced by benign peers.
 As a countermeasure, we propose a detection mechanism where peers are able to collaboratively file a complaint to the source when their average aggregated satisfaction drops below a certain threshold so the source can replace suspicious headnodes.
@@ -7,3 +7,4 @@ As a countermeasure, we propose a detection mechanism where peers are able to co
 
 Our simulations show that the detection mechanism is capable of restoring 95-100\% of peers satisfaction level while removing 80-90\% of malicious headnodes from its neighbor list while inducing a low overhead of approximately 8\%.
 As an ongoing work, we focus on evaluating the resilience of our approach against various $BM$ cheating strategies and integrating anonymous monitoring for proactive defense.
+We note that we provide the main conclusion of the thesis, w.r.t. the research questions and contributions discussed in each chapter in the thesis in ~\Cref{chap:conclusion}.
